--- a/app/src/main/res/layout/activity_laundry_main.xml
+++ b/app/src/main/res/layout/activity_laundry_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LaundryMain">
+    tools:context=".LaundryMain"
+    android:id="@+id/parentLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -81,11 +82,13 @@
                     android:layout_margin="16dp"
                     android:orientation="vertical">
                     <ImageView
+                        android:id="@+id/imageProfile"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:src="@drawable/ic_profile_icon"
                         android:layout_gravity="center"/>
                     <TextView
+                        android:id="@+id/teksProfile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Profil"
@@ -117,11 +120,13 @@
                     android:layout_margin="16dp"
                     android:orientation="vertical">
                     <ImageView
+                        android:id="@+id/imageTransaksi"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:src="@drawable/ic_baseline_price_change_24"
                         android:layout_gravity="center"/>
                     <TextView
+                        android:id="@+id/teksTransaksi"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Transaksi"
