--- a/app/src/main/res/layout/transactionlist_laundry.xml
+++ b/app/src/main/res/layout/transactionlist_laundry.xml
@@ -8,7 +8,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginTop="6dp"
-    app:cardBackgroundColor="#9AD0EC"
+    app:cardBackgroundColor="@color/lightblue"
     android:id="@+id/parentLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
