--- a/app/src/main/res/menu/logout_laundry.xml
+++ b/app/src/main/res/menu/logout_laundry.xml
@@ -2,9 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/itemLogout"
-        android:icon="@drawable/ic_baseline_logout_24"
-        android:title="Logout"
+        android:id="@+id/itemParent"
+        android:icon="@drawable/ic_baseline_settings"
+        android:title="Profile"
         app:showAsAction="ifRoom">
+        <menu xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto">
+            <item
+                android:id="@+id/itemSetting"
+                android:title="Setting"
+                app:showAsAction="ifRoom"/>
+            <item
+                android:id="@+id/itemLogout"
+                android:title="Logout"
+                app:showAsAction="ifRoom"/>
+        </menu>
     </item>
 </menu>
