--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,26 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AboutUs"
     android:id="@+id/parentLayoutAboutUs"
-    android:background="#1572A1">
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/logobinus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                android:src="@drawable/klood"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <TextView
+        android:layout_gravity="center_horizontal"
         android:id="@+id/namaAplikasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <TextView
+        android:layout_gravity="center_horizontal"
         android:id="@+id/versiAplikasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,14 +62,15 @@
         app:layout_constraintTop_toBottomOf="@+id/namaAplikasi" />
 
     <TextView
+        android:layout_gravity="center_horizontal"
         android:id="@+id/emailAplikasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="klook@gmail.com"
+        android:text="klood@gmail.com"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/versiAplikasi" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
