--- a/app/src/main/res/layout/activity_artikel_empat.xml
+++ b/app/src/main/res/layout/activity_artikel_empat.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ArtikelEmpat"
-    android:background="#1572A1"
-    android:orientation="vertical">
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:id="@+id/parentLayout">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -33,14 +34,14 @@
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="200dp"
-                android:src="@drawable/artikelsatu"/>
+                android:src="@drawable/artikelempat"/>
 
             <TextView
                 android:id="@+id/txtartikel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:padding="4dp"
+                android:padding="12dp"
                 android:background="@drawable/backgroundeditlaundry"
                 android:textColor="@color/black"
                 android:text="Setiap orang pasti menginginkan pakaian dengan wangi yang tahan lama namun bingung dalam mencari pewangi pakaian yang pas. Berikut ini adalah tips untuk memilih pewangi pakaian yang membuat wangi dari pakaian kamu tetap terjaga:\n\n1. Pilih pewangi pakaian dari bahan yang aman\nJangan pilih pewangi pakaian yang menggunakan bahan berbahaya karena residu dari bahan-bahan yang berbahaya tersebut dapat menempel ke kulit kamu saat pakaian tersebut dikenakan.\n\n2. Memilih pewangi yang bisa menghilangkan 7 macam bau\nPilihlah pewangi pakaian yang dapat menghilangkan berbagai macam bau serta mengangkat noda membandel.\n\n3. Memilih pewangi yang beraroma segar dan tidak menyengat\nPilihlah pewangi pakaian yang beraroma segar karena aroma segar cenderung lebih awet jika diaplikasikan ke bahan kain dan juga tidak menyengat saat wanginya dicium.\n\n4.Memilih pewangi yang juga dapat melembutkan pakaian
