--- a/app/src/main/res/layout/activity_artikel_satu.xml
+++ b/app/src/main/res/layout/activity_artikel_satu.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ArtikelSatu"
-    android:background="#1572A1"
-    android:orientation="vertical">
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:id="@+id/parentLayout">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -45,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:padding="4dp"
+                android:padding="12dp"
                 android:background="@drawable/backgroundeditlaundry"
                 android:textColor="@color/black"
                 android:text="Layaknya pakaian yang kita gunakan sehari-hari seperti baju dan celana, kita juga harus memperhatikan kebersihan sepatu
