--- a/app/src/main/res/layout/activity_artikel_tiga.xml
+++ b/app/src/main/res/layout/activity_artikel_tiga.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ArtikelTiga"
-    android:background="#1572A1"
-    android:orientation="vertical">
+    android:background="@color/blue"
+    android:orientation="vertical"
+    android:id="@+id/parentLayout">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -47,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/backgroundeditlaundry"
-                android:padding="4dp"
+                android:padding="12dp"
                 android:text="Zaman sekarang, manusia menginginkan segala sesuatunya mudah bahkan dalam urusan mencuci pakaian. Banyak orang tidak memiliki waktu untuk mencuci pakaiannya sendiri. Sehingga jasa laundry semakin banyak digunakan oleh masyarakat. Berikut ini 6 kelebihan menggunakan jasa laundry.\n\n1. Menghemat biaya bulanan\nBarang-barang yang dibutuhkan untuk mencuci pakaian seperti pemutih, pewangi, dan deterjen tidak perlu kita beli.\n\n2. Hemat waktu\nKita tidak perlu meluangkan waktu untuk mencuci pakaian kita dan dapat menggunakan waktunya untuk hal-hal lain.\n\n3. Mengurangi tagihan air dan listrik\nDengan menggunakan jasa laundry, tentunya kita tidak perlu membayar tagihan air dan listrik untuk mencuci pakaian.\n\n4. Tidak perlu menjemur\nMenjemur sudah bagian dari jasa yang dilakukan oleh laundry, sehingga kita tidak perlu menggunakan waktu kita lagi untuk menjemur pakaian\n\n5. Tidak perlu menyetrika\nKita tidak perlu menyetrika, karena jika kita menggunakan jasa laundry, mereka juga menyetrika pakaian kita."
                 android:textColor="@color/black" />
 
