--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -50,7 +50,7 @@
 
         <TextView
             android:id="@+id/txtDescriptionLaundry"
-            android:layout_width="wrap_content"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="112dp"
             android:layout_marginTop="4dp"
