20230116 - menambahkan popup pada order, about us, serta validasi ketika order process - #KorbanJanjiManisNya

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -40,10 +40,11 @@
     <TextView
         android:layout_gravity="center_horizontal"
         android:id="@+id/namaAplikasi"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Klood"
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/ralewayregular"
+        android:text="Klood merupakan aplikasi yang memudahkan para pengguna untuk mencari tempat laundry sesuai keinginan mereka.\nDengan menghadirkan berbagai fitur, Klood menghadirkan berbagai solusi yang efektif bagi para pengguna."
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,8 +55,11 @@
         android:id="@+id/versiAplikasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="160dp"
         android:text="v1.00"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/ralewayregular"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +71,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/ralewayregular"
         android:text="klood@gmail.com"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
