--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,8 @@
             android:clickable="true"
             android:fontFamily="@font/ralewayregular"
             android:text="Daftar sekarang!"
-            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textColor="@color/teal_200"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.070"
             app:layout_constraintStart_toEndOf="@+id/text1"
