--- a/app/src/main/res/layout/activity_order_process.xml
+++ b/app/src/main/res/layout/activity_order_process.xml
@@ -698,13 +698,25 @@
                             android:textColor="@color/black"
                             android:buttonTint="@color/blue"/>
 
+                        <Space
+                            android:layout_width="60dp"
+                            android:layout_height="0dp"/>
+
+                        <ImageView
+                            android:visibility="gone"
+                            android:id="@+id/imageInfo"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:src="@drawable/question"
+                            android:onClick="question_info"/>
+
                         <android.widget.Button
                             android:id="@+id/buttonHarga"
-                            android:layout_width="80dp"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="80dp"
+                            android:layout_width="64dp"
+                            android:layout_height="36dp"
+                            android:layout_marginLeft="12dp"
                             android:text="Tampilkan Harga"
-                            android:textSize="12sp"
+                            android:textSize="10sp"
                             android:textAllCaps="false"
                             android:background="@drawable/spinnerrgsshape"/>
 
