--- a/app/src/main/res/xml/settingxml.xml
+++ b/app/src/main/res/xml/settingxml.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <PreferenceCategory android:title="Theme">
+    <PreferenceCategory android:title="Tema">
 
         <SwitchPreference
             android:defaultValue="false"
