20230117 - benerin title & perintilan kecil #MOVE

--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -170,7 +170,7 @@
             android:background="@drawable/edittextdetaillaundry"
             android:textColor="@color/black"
             android:textSize="16dp"
-            android:text="descs"
+            android:text=""
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -192,7 +192,7 @@
             android:id="@+id/btnPopup"
             android:layout_width="100dp"
             android:layout_height="52dp"
-            android:text="Order"
+            android:text="Pesan"
             android:backgroundTint="#9AD0EC"
             android:textColor="@color/black"
             android:textSize="18dp"
