--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -39,6 +39,7 @@
 
     <TextView
         android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:id="@+id/namaAplikasi"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
