--- a/app/src/main/res/layout/activity_profile_laundry.xml
+++ b/app/src/main/res/layout/activity_profile_laundry.xml
@@ -57,7 +57,6 @@
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 android:fontFamily="@font/ralewayregular"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.165"
                 app:layout_constraintStart_toEndOf="@+id/imageProfile"
@@ -75,8 +74,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.26"
                 app:layout_constraintStart_toEndOf="@+id/imageProfile"
-                app:layout_constraintTop_toBottomOf="@id/txtNama"
-                app:layout_constraintVertical_bias="0.85" />
+                app:layout_constraintTop_toBottomOf="@id/txtNama" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -110,7 +108,6 @@
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 android:fontFamily="@font/ralewayregular"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.165"
                 app:layout_constraintStart_toEndOf="@+id/imagePhone"
@@ -147,11 +144,10 @@
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:layout_marginStart="28dp"
-                android:src="@drawable/mail"
+                android:src="@drawable/deskripsi"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.12" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtDesc"
@@ -172,14 +168,15 @@
                 android:id="@+id/Desc"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/ralewayregular"
                 android:text="Descnya"
                 android:textColor="@color/white"
                 android:textSize="16dp"
-                android:fontFamily="@font/ralewayregular"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.26"
+                app:layout_constraintHorizontal_bias="0.268"
                 app:layout_constraintStart_toEndOf="@+id/imageEmail"
-                app:layout_constraintTop_toBottomOf="@+id/txtDesc" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
