--- a/app/src/main/res/xml/settingxml.xml
+++ b/app/src/main/res/xml/settingxml.xml
@@ -8,7 +8,8 @@
             android:defaultValue="false"
             android:key="dark_mode"
             android:summary="Mengaktifkan tema warna gelap pada aplikasi "
-            android:title="Dark Mode" />
+            android:title="Dark Mode"
+            android:fontFamily="@font/ralewayregular"/>
 
     </PreferenceCategory>
 
