--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="orange">#F29339</color>
     <color name="red">#B90E0A</color>
     <color name="green">#299617</color>
+    <color name="orangeinfo">#F9973E</color>
 </resources>
